--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -983,10 +983,6 @@ This ambiguity in semantics is one of the main reasons why \emph{OWL 2} has not 
 \section{Classification of RDF Constraint Types According to CWA/UNA Dependency, Reasoning, and Complexity}
 \label{classification-rdf-constraints}
 
-\begin{itemize}
-	\item \textcolor{red}{R1: This is wrong that the Tbox axioms ( RDF constraints in this paper) can be classified as it is suggested in Section 3. The reason is that there exist possibly complex logical interferences between them. For instance, even in lightweight DLs such as  DL-Lite, positive inclusions (PIs) can be used to infer negative inclusions (NIs).}
-\end{itemize}
-
 %We divide these constraints into three classes:
 %\begin{itemize}
 	%\item constraints expressible by OWL 2 QL
@@ -1009,7 +1005,7 @@ This technical report also contains mappings to \emph{DL} to logically underpin 
 %The DL constructs \ms{property inclusion}, \ms{complement}, \ms{intersection}, \ms{union}, and \ms{existential restriction} are used to express this constraint.  
 % As existential restrictions are part of OWL 2 DL reasoning, the constraint's complexity is \textsc{N2exptime}.
 % \er{Now computational complexity? Existential restrictions are not necessarily \textsc{N2Exptime}}
-The subsequent steps are needed to get an idea about the performance (i.e., the computational complexity) to validate \textcolor{red}{simple (atomic) and complex (composed) constraint types}:
+\textcolor{red}{The subsequent steps are needed to get an idea about the performance, i.e., the computational complexity, to validate constraint types:}
 \begin{enumerate}
 	\item As 34 of 74 constraint types correspond to \emph{OWL 2} axioms and as \emph{OWL 2} has different semantics than RDF validation, 
 	we have to determine the semantics in terms of validation results for each constraint type.
@@ -1019,7 +1015,7 @@ The subsequent steps are needed to get an idea about the performance (i.e., the 
 	%we determine for each constraint type if it depends on the \emph{CWA} and if it depends on the \emph{UNA}.
 	\item  We investigate the affect of reasoning to the validation process of each constraint type, i.e.,
 we examine if reasoning can be performed prior to validation to enhance data quality.
-	\item Since reasoning makes difference  for some validation types, we note them with the computational complexity  of  the language that they are expressed in.
+	\item \textcolor{red}{Since reasoning makes difference  for some validation types, we note them with the computational complexity  of  the language that they are expressed in.}
 	\item Since the combination of \emph{DL} constructs of a constraint type determines its complexity, by mapping to \emph{DL} we get an idea of the complexity for each constraint type in worst case.
 \end{enumerate}
 
@@ -1513,25 +1509,30 @@ Semantic-Web-Publication a ResourceShape ; property [
 \label{sec:constraints-complexity}
 %\tb{I think this sub section is not that fluently to read}
 
-reviews:
+\textcolor{red}{reviews:}
 \begin{itemize}
-	\item However, if it is about the “complexity on reasoning”, as we do mean ontological reasoning  here, the discussion is done according to well-established complexity results (in literature) on reasoning in particular DL languages, having only those  features used in constraints. Therefore the complex interferences are included. 
-	\item The first paragraph is confusing. Refer to what? Follows? 
+  \item \textcolor{red}{Reviewer1: This is wrong that the Tbox axioms ( RDF constraints in this paper) can be classified as it is suggested in Section 3. The reason is that there exist possibly complex logical interferences between them. For instance, even in lightweight DLs such as  DL-Lite, positive inclusions (PIs) can be used to infer negative inclusions (NIs).}
+	\item \textcolor{red}{Erman: we mean ontological reasoning  here, the discussion is done according to well-established complexity results (in literature) on reasoning in particular DL languages, having only those  features used in constraints. Therefore the complex interferences are included. }
+	\item \textcolor{red}{The first paragraph is confusing. Refer to what? Follows? }
 \end{itemize}
 
+Since the combination of \emph{DL} constructs, needed to express a constraint type, determines its computational complexity, 
+by mapping to \emph{DL} we get an idea of the performance for each constraint type in worst case.
+
+-----
+
 To have a further evaluation on the latter and to refer easily, we divide $\mathcal{CT}_R$ into two classes (not disjoint). 
-Overall, we have the following. Since, OWL 2 DL is more expressive than OWL 2 QL,  $\mathcal{C}_R ^{\mathcal{QL}} \subseteq \mathcal{C}_R ^{\mathcal{DL}}$ follows. 
+Overall, we have the following. Since, \emph{OWL 2 DL} is more expressive than \emph{OWL 2 QL},  $\mathcal{C}_R ^{\mathcal{QL}} \subseteq \mathcal{C}_R ^{\mathcal{DL}}$ follows. 
 \begin{enumerate}\itemsep0.5em
-	\item $\overline{\mathcal{C}_R}$: validation by query answering without reasoning
-	\item $\mathcal{C}_R ^{\mathcal{QL}}$: validation by query answering with OWL 2 QL reasoning
-	\item $\mathcal{C}_R ^{\mathcal{DL}}$: validation by query answering with OWL 2 DL reasoning
+	\item $\overline{\mathcal{CT}_R}$: validation by query answering without reasoning
+	\item $\mathcal{CT}_R ^{\mathcal{QL}}$: validation by query answering with \emph{OWL 2 QL} reasoning
+	\item $\mathcal{CT}_R ^{\mathcal{DL}}$: validation by query answering with \emph{OWL 2 DL} reasoning
 \end{enumerate}
-Recall that, in this work we limit $C_R$ to the constraint types which can be expressed by OWL 2 DL and still requires reasoning  (i.e., $C_R = C_R ^{\mathcal{DL}}$). This is due the fact that, OWL 2 DL is still quite expressive\footnote{It could alternatively be set to a more expressive language (e.g., OWL 2 Full). Such treatment can be done in future work, if it is understood that we require that.}. 
-Some of those constraint types can still be expressed in some constraint languages, which will be the focus of next section.
+Recall that, in this work we limit $\mathcal{CT}_R$ to the constraint types which can be expressed by \emph{OWL 2 DL} and still requires reasoning 
+(i.e., $\mathcal{CT}_R$ = $\mathcal{CT}_R ^{\mathcal{DL}}$). This is due the fact that, \emph{OWL 2 DL} is still quite expressive\footnote{It could alternatively be set to a more expressive language (e.g., \emph{OWL 2 Full}). Such treatment can be done in future work, if it is understood that we require that.}. 
+Some of these constraint types can still be expressed by constraint languages which is the focus of the next section.
 %The complexity class $\mathcal{CT}_R$ encompasses all \emph{constraints with reasoning} for which reasoning can be executed but cannot be expressed by OWL 2.  \er{What/Why can't  be expressed by OWL 2  while being inferred? }\tb{e.g. class-specific property ranges or class-specific reflexive object properties cannot be expressed in OWL / these 2 axioms can only be stated globally for the properties, we cannot restrict it to individuals of specific classes}
-Table \ref{tab:constraint-type-specific-complexity-classes} gives an overview of the computational complexity for RDF validation when reasoning is performed and when reasoning is not performed:
-
-
+Table \ref{tab:constraint-type-specific-complexity-classes} gives an overview over the complexity for RDF validation when reasoning is performed and when reasoning is not performed.
 \begin{table}
 \centering
 \caption{Constraint Type Specific Complexity Classes}
@@ -1539,19 +1540,23 @@ Table \ref{tab:constraint-type-specific-complexity-classes} gives an overview of
 \begin{tabular}{>{\centering\arraybackslash}m{1.5in} | >{\centering\arraybackslash}m{1in}} 
 \textbf{Constraint Type Class}  & \textbf{Complexity Class}\\
 \hline
-$\overline{\mathcal{C}_R}$ & \textsc{Pspace}-Complete \\[7pt] 
+$\overline{\mathcal{CT}_R}$ & \textsc{Pspace}-Complete \\[7pt] 
 \hline
-$\mathcal{C}_R ^{\mathcal{QL}}$ & \textsc{Ptime} \\[7pt]
+$\mathcal{CT}_R ^{\mathcal{QL}}$ & \textsc{Ptime} \\[7pt]
 \hline
-$\mathcal{C}_R ^{\mathcal{DL}}$ & \textsc{N2exptime} \\[7pt]
+$\mathcal{CT}_R ^{\mathcal{DL}}$ & \textsc{N2exptime} \\[7pt]
 
 \end{tabular}
 \label{tab:constraint-type-specific-complexity-classes}
 \end{table}
 
 
-What is considered by RDF validation with or without reasoning corresponds to performing SPARQL queries.  
-It is known that performing SPARQL queries is in \textsc{Pspace}-Complete \cite{Perez2009}. Since OWL 2 profiles are based on \textit{DL-Lite} family and query answering in OWL 2 QL (which is based on \textit{DL-Lit}$e_R$ is in \textsc{LogSpace} (or rather in AC$^0$ ) \cite{Calvanese2007}, so is the constraint validation by queries with  reasoning. Furthermore, TBox-reasoning in OWL 2 QL is in \textsc{Ptime} \cite{Calvanese2007}, hence complete query rewriting as well as combined complexity (reasoning and than querying) is in \textsc{Ptime} \cite{Artale2009,Calvanese2007}.  With the more expressive profile OWL 2 DL, reasoning is in \textsc{N2exptime} \cite{owl2profiles2008} which is a class of considerably higher complexity.
+What is considered by RDF validation with or without reasoning corresponds to performing \emph{SPARQL} queries.  
+It is known that performing \emph{SPARQL} queries is in \textsc{Pspace}-Complete \cite{Perez2009}. 
+Since \emph{OWL 2} profiles are based on the \textit{DL-Lite} family and query answering in \emph{OWL 2 QL} (which is based on \textit{DL-Lit}$e_R$ is in \textsc{LogSpace} (or rather in \emph{AC$^0$} ) \cite{Calvanese2007}, so is the constraint validation by queries with  reasoning. 
+Furthermore, TBox reasoning is performed in \emph{OWL 2 QL} is in \textsc{Ptime} \cite{Calvanese2007}, 
+hence complete query rewriting as well as combined complexity (reasoning and than querying) is in \textsc{Ptime} \cite{Artale2009,Calvanese2007}.  
+With the more expressive profile \emph{OWL 2 DL}, reasoning is executed in \textsc{N2exptime} \cite{owl2profiles2008} which is a class of considerably higher complexity.
 The  relation between those complexity classes is well-known \cite{Arora:2009:CCM:1540612} and as follows:
 %\begin{eqnarray*}
 %\overline{\mathcal{C}_R} \subset \mathcal{C}_R ^{\mathcal{QL}} \subset \mathcal{C}_R \subseteq \mathcal{C}_R ^{\mathcal{DL}}
@@ -1561,14 +1566,20 @@ The  relation between those complexity classes is well-known \cite{Arora:2009:CC
 \end{eqnarray*}
 %There are constraints (e.g., class-specific property range, class-specific reflexive object properties) for which reasoning could be executed even though there is currently no implementation supported by any constraint language. 
 %We leave it as future work to write SPARQL CONSTRUCT queries in order to provide reasoning for these constraints.
-Note that there is also OWL 2 Full (which is not a DL) for reasoning that we will not include in our classification, since its high worst case complexity (undecidability) as well as interesting constraint types with reasoning is already available in aforementioned OWLs (OWL 2 DL/QL).
+We do not include \emph{OWL 2 Full} 
+%\textcolor{red}{(which is not a \emph{DL})} 
+in our classification
+due to its high worst case complexity (undecidability) and
+as $\mathcal{CT}_R$ constraint types are already expressible either by \emph{OWL 2 QL} or \emph{OWL 2 DL}.
 
-\section{Classification of Constraint Languages According to Expressivity}
+%\section{Classification of Constraint Languages According to Expressivity}
+%\section{Constraint Type Specific Expressivity of Constraint Languages}
+\section{Expressivity of Constraint Languages}
 \label{classification-constraint-languages}
 
-reviews:
+\textcolor{red}{reviews:}
 \begin{itemize}
-	\item The term “expressivity scores” might be useful but a stronger argument is needed.
+	\item \textcolor{red}{The term “expressivity scores” might be useful but a stronger argument is needed.}
 \end{itemize}
  
 In this section, we concern ourselves with the expressivity of constraint languages, or constraint type (requirement) specific expressivity.
@@ -2041,27 +2052,27 @@ The validator may also recommend one of these constraint languages having the hi
 As reasoning may cause high complexity, the validator may show which constraint types from the user's selection cause the higher complexity class 
 and it may provide solutions how to get to the next lower complexity class. In this regard, it would be charming to have an estimation on which group of constraint types would demand what class of complexity. However, this is not an easy question, since complexity results are language specific and operational semantics is involved as well. Therefore, it is hard to maintain a general complexity result for a constraint type independent of the language chosen. Yet, providing an estimation for particular cases can still be straightforward.
 
-reviews:
+\textcolor{red}{reviews:}
 \begin{itemize}
-	\item logical semantics vs. notation
+	\item \textcolor{red}{logical semantics vs. notation}
 	
 	\begin{itemize}
 			\item 
-This paper makes a confusion between notations and logical semantics.
+\textcolor{red}{This paper makes a confusion between notations and logical semantics.
 It is not clear whether they consider RDF as a notation or as a data model with a logical semantics.
 This makes a lot of difference because several ontological statements can be expressed in RDF notation, even complex OWL inclusion statements. Their logical semantics cannot be ignored, even for the practioners.
 When they write <author, rdfs:range, Person>, this means precisely that they do not have to add explicitly for every triple <uri\_j, author, uri\_k> as many triples <uri\_k, rdf:type, Person>.
 This is the interest of RDF triplestores: to allow incomplete description of data, while allowing reasoning to complete it.
 Section 2 makes complicate this basic property for which a sentence in the introduction would have been sufficient.
-BTW, it is completely misleading to say in introduction  "Reasoning is a promising solution as a pre-validation step to overcome this shortcoming": reasoning must be part of RDF data management as soon as RDFS statements are declared (otherwise, why would they be declared ?).
-    \item answer: We use RDF as data model (with intended semantics) when performing reasoning with RDFS/OWL 2 semantics (OWA/nUNA) as well as for RDF validation and not just as a notation. We suggest using RDFS/OWL 2 semantics (OWA, nUNA) when performing reasoning (the original intention of RDFS/OWL 2) and we propose to take multiple languages into account (i.a. OWL 2) with different semantics (CWA, UNA) for the purpose to validate RDF data. Reasoning should be an optional step prior to validation. When reasoning is not wished to be performed, however, then omitted class assignment triples, e.g., must cause constraint violations as they are not intended to be inferred. 
+BTW, it is completely misleading to say in introduction  "Reasoning is a promising solution as a pre-validation step to overcome this shortcoming": reasoning must be part of RDF data management as soon as RDFS statements are declared (otherwise, why would they be declared ?).}
+    \item \textcolor{red}{answer: We use RDF as data model (with intended semantics) when performing reasoning with RDFS/OWL 2 semantics (OWA/nUNA) as well as for RDF validation and not just as a notation. We suggest using RDFS/OWL 2 semantics (OWA, nUNA) when performing reasoning (the original intention of RDFS/OWL 2) and we propose to take multiple languages into account (i.a. OWL 2) with different semantics (CWA, UNA) for the purpose to validate RDF data. Reasoning should be an optional step prior to validation. When reasoning is not wished to be performed, however, then omitted class assignment triples, e.g., must cause constraint violations as they are not intended to be inferred.} 
 \end{itemize}
 %	\item While gross numbers give some insight, if the paper listed which
 %problems can be solved by each constraint language, it might allow
 %readers more insight. 
 %  \item Is there a useful grouping of the kinds of
 %restrictions that can be stated by each language?  
-	\item A reader might want to see some lessons or experiences that could be learned from such a comparative study.
+	\item \textcolor{red}{A reader might want to see some lessons or experiences that could be learned from such a comparative study.}
 \end{itemize}
 
 %\section{Christian's Feedback}
