--- a/paper/paper 2/paper 2.tex
+++ b/paper/paper 2/paper 2.tex
@@ -470,7 +470,7 @@ which means whenever the constraints are applied to any RDF data they point out 
 To be able to define mappings between semantically equivalent \emph{specific constraints} (expressed by different languages) and 
 between \emph{specific constraints} and \emph{generic constraints},
 we show for each constraint type that their constraints lead to exactly the same violations which shows that they behave in the same way. 
-We expressed constraint types by different languages
+We express constraint types by different languages
 to document identical semantics for these languages with regard to appropriate constraint types. 
 
 %We defined the \textbf{formal generic semantics of the vocabulary} to describe constraints of any constraint type in a generic way (see paper appendix):
